# django_stepik

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .style.yapf   Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: basic_code_style_checks.yml  django_simple_tests.yml
app/: manage.py
app/common/: views.py
app/config/: celery.py  celery_app.py  urls.py
app/orders/: admin.py  forms.py  models.py  order_services.py  urls.py  views.py
app/products/: admin.py  context_processors.py  models.py  product_services.py  tests.py  urls.py  views.py
app/users/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  user_services.py  views.py
docker/nginx/: Dockerfile  default.conf  nginx.conf
docs/: index.html
docs/src/: script.js  styles.css
env/: .env.example
nginx-conf.d/: nginx.conf
orders/: admin.py  forms.py  models.py  order_services.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_order_status.py  0004_alter_order_status.py
persistentdata/nginx-conf.d/: nginx.conf
products/: admin.py  models.py  product_services.py  tests.py  urls.py  views.py
products/fixtures/: categories.json  goods.json
products/migrations/: 0001_initial.py  0002_basket.py  0003_auto_20230116_2011.py  0004_product_stripe_product_price_id.py
readme/: DEPLOY.md  DOCKER.md
store/: celery.py  settings.py  urls.py
style/: bandit.yaml
users/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  user_services.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20230116_2011.py  0003_auto_20230117_0436.py  (+1 more)
(+46 files in other folders)
