[tool.poetry]
name = "store"
version = "0.1.0"
description = "Project from stepik course"
authors = ["kazila <mrkazzila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2.13"
pillow = "^9.4.0"
django-crispy-forms = "^1.14.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
psycopg2-binary = "^2.9.5"
django-allauth = "^0.52.0"
django-debug-toolbar = "^3.8.1"
django-redis = "^5.2.0"
celery = "^5.2.7"
stripe = "^5.0.0"
django-environ = "^0.9.0"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
