[tool.poetry]
name = "store"
version = "2.0.0"
description = "Stepik course. Mini e-commerce shop using django3"
authors = ["mrKazzila <mrkazzila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2.18"
pillow = "^9.4.0"
django-crispy-forms = "^1.14.0"
psycopg2-binary = "^2.9.5"
django-allauth = "^0.52.0"
django-debug-toolbar = "^3.8.1"
django-redis = "^5.2.0"
celery = "^5.2.7"
stripe = "^5.0.0"
python-dotenv = "^1.0.0"
django-extensions = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pep8-naming = "^0.13.3"
yapf = "^0.32.0"
toml = "^0.10.2"
pre-commit = "^3.3.0"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.2"
flake8-bugbear = "^23.5.9"
flake8-commas = "^2.1.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.yapfignore]
ignore_patterns = [
  ".venv/*",
  "pytest_",
  "**/migrations/*",
  "app/manage.py",
]
